# mock-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/en_us/: main.rs
src/: calculator.rs  error.rs  factory.rs  generator.rs  helpers.rs  lib.rs  main.rs  provider.rs
src/calculator/: ean.rs  iban.rs  luhn.rs
src/helpers/: base.rs  miscellaneous.rs
src/provider/: address.rs  barcode.rs  base.rs  color.rs  company.rs  en_us.rs  formatter.rs  locale.rs  miscellaneous.rs  payment.rs  person.rs  phone_number.rs  shared_formats.rs  universal.rs
src/provider/en_US/: person.rs
src/provider/en_us/: address.rs  company.rs  payment.rs  person.rs  phone_number.rs  provider.rs
src/provider/universal/: barcode.rs  color.rs  payment.rs
