[package]
name = "mock-rs"
description = "A Rust crate for generating fake data inspired by FakerPHP"
repository = "https://github.com/babalolajnr/mock-rs"
version = "0.1.0"
edition = "2018"
authors = ["Abdulqudduus Babalola <babalolajnr@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["mock", "faker", "faker-rs", "mock-rs", "fake-data",]
categories = ["web-programming"]


[dependencies]
rand = "0.8.4"
chrono = "0.4.19"